<?xml version="1.0" encoding="utf-8"?>
<RelativeLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    tools:context=".MainActivity2">

    <Button
        android:id="@+id/back_btn"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_alignParentTop="true"
        android:layout_marginHorizontal="110sp"
        android:layout_marginTop="20sp"
        android:text="@string/back_btn" />

    <EditText
        android:id="@+id/vvod_sec"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_below="@+id/back_btn"
        android:layout_marginHorizontal="150sp"
        android:layout_marginTop="12dp"
        android:hint="@string/vvod_sec" />

    <Button
        android:id="@+id/confirm_sec_btn"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_below="@+id/vvod_sec"
        android:layout_marginHorizontal="100sp"
        android:layout_marginTop="10sp"
        android:onClick="sendDate"
        android:text="@string/confirm_sec_btn" />

</RelativeLayout>